--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -18,10 +18,10 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
-  padding: 0;
+  padding-left: 50%;
+  padding-right: 50%
   border: 0;
   font: inherit;
-  vertical-align: 50%;
 }
 
 /* HTML5 display-role reset for older browsers */
