--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -1,3 +1,5 @@
+@import "rouge-github";
+
 /*******************************************************************************
 MeyerWeb Reset
 *******************************************************************************/
@@ -16,8 +18,10 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
-  border: 0;
+  padding-left: 50%;
+  padding-right: 50%
   font: inherit;
+  vertical-align: baseline
 }
 
 /* HTML5 display-role reset for older browsers */
