--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -57,6 +57,8 @@ h1, h2, h3, h4, h5, h6 {
   color:#FFFFFF;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
+  text-align: center;
+  
 }
 
 h1 {
@@ -135,6 +137,10 @@ img {
   padding: 5px;
   margin: 10px 0 10px 0;
   border: 1px solid #ebebeb;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 
   box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
