other elementsd centrer

--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -686,3 +686,9 @@ Small Device Styles
 .highlight {
   background-color: #f8f8f8;
 }
+.center {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 10px;
+}
