--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -19,7 +19,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
   font: inherit;
-  vertical-align: baseline
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
