--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -134,15 +134,13 @@ img {
   position: relative;
   margin: auto;
   max-width: 739px;
-  padding: 5px;
-  margin: 10px 0 10px 0;
   border: 1px solid #ebebeb;
+  display: block;
+  text-align: center;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  vertical-align: middle;
-  text-align: center;
-  width: 40%;
+  width: 50%;
 
   box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
