--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -682,3 +682,7 @@ Small Device Styles
     width: 50%;
     padding: 10px;
 }
+  table.center {
+    margin-left:auto; 
+    margin-right:auto;
+  }
