--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -136,7 +136,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 100%;
+  height: 720px
 
   box-shadow: 0 0 5px #ebebeb;
   -webkit-box-shadow: 0 0 5px #ebebeb;
