--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -60,13 +60,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 38px;
   font-weight: 700;
 }
 
 h2 {
   padding-bottom: 10px;
-  font-size: 32px;
+  font-size: 30px;
 }
 
 h3 {
@@ -87,6 +87,7 @@ h6 {
 
 p {
   margin: 10px 0 15px 0;
+  text-align: center;
 }
 
 footer p {
