--- a/jekyll-theme-slate.css
+++ b/jekyll-theme-slate.css
@@ -689,6 +689,10 @@ Small Device Styles
     margin-left:auto; 
     margin-right:auto;
   }
+  iframe.center {
+	  margin-left:auto; 
+      margin-right:auto;
+  }
   nav ul {
 	  list-style-type:none;
 	  
